Ajute de tamaño de texto

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 						<a href="#showcase">Destacado</a>
 					</li>
 					<li>
-						<a href="#core">Elementos principales</a>
+						<a href="#core">Pilares</a>
 					</li>
 					<li>
-						<a href="#store">Testimonios / Productos</a>
+						<a href="#store">Productos</a>
 					</li>
 					<li>
 						<a href="#contact">Contacto</a>
@@ -51,13 +51,9 @@
 
 			<article class="exhibit">
 				<div class="exhibit-text">
-					<h3 class="exhibit-title">El camino de la redención</h3>
+					<h3 class="exhibit-title">Show case 1</h3>
 					<p class="exhibit-description">
 						Descripción del proyecto: Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-						La mamá gallina les da comida y les presta abrigo.
-						Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-						La mamá gallina les da comida y les presta abrigo.
-						Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
 						La mamá gallina les da comida y les presta abrigo.
 					</p>
 					<p class="exhibit-link">Puedes verlo en: <a href="">www.link1.com</a></p>
@@ -72,13 +68,9 @@
 
 			<article class="exhibit">
 				<div class="exhibit-text">
-					<h3 class="exhibit-title">Restaurant "D'María Chicharrones"</h3>
+					<h3 class="exhibit-title">Show case 2</h3>
 					<p class="exhibit-description">
 						Descripción del proyecto: Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-						La mamá gallina les da comida y les presta abrigo.
-						Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-						La mamá gallina les da comida y les presta abrigo.
-						Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
 						La mamá gallina les da comida y les presta abrigo.
 					</p>
 					<p class="exhibit-link">Puedes verlo en: <a href="">www.link2.com</a></p>
@@ -93,13 +85,9 @@
 
 			<article class="exhibit">
 				<div class="exhibit-text">
-					<h3 class="exhibit-title">Silicon Brained Machines</h3>
+					<h3 class="exhibit-title">Show case 3</h3>
 					<p class="exhibit-description">
 						Descripción del proyecto: Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-						La mamá gallina les da comida y les presta abrigo.
-						Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-						La mamá gallina les da comida y les presta abrigo.
-						Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
 						La mamá gallina les da comida y les presta abrigo.
 					</p>
 					<p class="exhibit-link">Puedes verlo en: <a href="">www.link3.com</a></p>
@@ -128,9 +116,8 @@
 						<h3 class="kernel-title">Pilar 1</h3>
 						<p class="kernel-description">
 							Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-							La mamá gallina les da comida y les presta abrigo.
 						</p>
-						<p class="kernel-link"><a href="">GO GO GO</a></p>
+						<p class="kernel-link"><a href="">Entrar</a></p>
 					</div>
 				</article>
 	
@@ -145,9 +132,8 @@
 						<h3 class="kernel-title">Pilar 2</h3>
 						<p class="kernel-description">
 							Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-							La mamá gallina les da comida y les presta abrigo.
 						</p>
-						<p class="kernel-link"><a href="">GO GO GO</a></p>
+						<p class="kernel-link"><a href="">Entrar</a></p>
 					</div>
 				</article>
 	
@@ -162,9 +148,8 @@
 						<h3 class="kernel-title">Pilar 3</h3>
 						<p class="kernel-description">
 							Los pollitos dicen pio cuando tienen hambre y cuando tienen frío.
-							La mamá gallina les da comida y les presta abrigo.
 						</p>
-						<p class="kernel-link"><a href="">GO GO GO</a></p>
+						<p class="kernel-link"><a href="">Entrar</a></p>
 					</div>
 				</article>
 			</div>
@@ -174,8 +159,10 @@
 			<h2 class="monetization-title">Nuestros productos digitales</h2>
 			<article class="store">
 				<div class="store-text">
-					<h2 class="store-title">Tienda</h3>
-					<p class="store-description">Descripción</p>
+					<h3 class="store-title">Tienda</h3>
+					<p class="store-description">
+						En esta sección puedes ver todos nuestros productos
+					</p>
 				</div>
 				<figure class="store-image">
 					<img 
@@ -187,34 +174,43 @@
 		</section>
 
 		<section id="contact" class="contact">
-			<form action="" class="email">
-				<label for="email">¿Creamos algo juntos?</label>
-				<input type="text" placeholder="Déjame tu e-mail" id="email">
-				<button>Enviar</button>
-			</form>
-			<div class="social">
-				<a href="https://www.linkedin.com/in/" class="social-link linkedin"></a>
-				<a href="https://www.instagram.com/" class="social-link instagram"></a>
-				<a href="https://www.facebook.com/" class="social-link facebook"></a>
-				<a href="https://github.com/" class="social-link github"></a>
-			</div>
+			<h2 class="contact-title">Contáctanos</h2>
+			
+				<form action="" class="email">
+					<input type="text" placeholder="e-mail" id="email">
+					<button>Enviar</button>
+				</form>
+
+				<div class="social">
+					<a href="https://www.linkedin.com/in/" class="social-link linkedin"></a>
+					<a href="https://www.instagram.com/" class="social-link instagram"></a>
+					<a href="https://www.facebook.com/" class="social-link facebook"></a>
+					<a href="https://github.com/" class="social-link github"></a>
+				</div>
+			
 		</section>
 
 		<footer class="footer">
-			<div class="footer-message0">
+			<div class="footer-message">
 				<p>
-					Awekening
+					Awekening &#8482
 				</p>
 			</div>
-			<div class="footer-image">
+			<div class="footer-img">
 				<figure class="footer-logo">
 					<img 
 						src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP"
 						alt="logo-linkarox-bi.svg"
 					>
 				</figure>
-				<div class="footer-message">
-					<p>Desarrollado con <img src="https://drive.google.com/uc?export=view&id=10xOKwS3QQM08SWMdLz4PRqupaRgtTLuq" alt="heart.svg"> por <a href="https://link4.com"><strong>dlvronin</strong></a>&#8482</p>
+				<div class="footer-text">
+					<p>
+						Desarrollado con 
+						<img src="https://drive.google.com/uc?export=view&id=10xOKwS3QQM08SWMdLz4PRqupaRgtTLuq" alt="heart.svg">
+						 por 
+						 <a href="https://link4.com"><strong>dlvronin</strong></a>
+						 &#8482
+					</p>
 				</div>
 			</div>
 		</footer>			
