--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Awakening Road Project</title>
-		<link rel="icon" type="image/png" href="">
+		<link rel="icon" type="image/png" href="https://drive.google.com/uc?export=view&id=1-Ef3V_mEdaSHjuVhiTMPE49ZXYuWVFJA">
 		<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -40,7 +40,7 @@
 			</div>
 			<figure class="hero-image">
 				<img
-					src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP"
+					src="https://drive.google.com/uc?export=view&id=1-ADA2LsnYzY_nAoa7CfsAH3TYtVOYPpJ"
 					alt="hero-image.png"
 				>
 			</figure>
@@ -60,8 +60,8 @@
 				</div>
 				<figure class="exhibit-image">
 					<img 
-						src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP" 
-						alt="overview_1.png"
+						src="https://drive.google.com/uc?export=view&id=1-GKQSCQ7P-ctpqjdjK6vqgZhAEGPqYZc" 
+						alt="exhibit_1.png"
 					>
 				</figure>
 			</article>
@@ -77,8 +77,8 @@
 				</div>
 				<figure class="exhibit-image">
 					<img 
-						src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP" 
-						alt="overview_2.png"
+						src="https://drive.google.com/uc?export=view&id=1-MKqQv8MhEPPo8VMrq7IBDs36QevWFMn" 
+						alt="exhibit_2.png"
 					>
 				</figure>
 			</article>
@@ -94,8 +94,8 @@
 				</div>
 				<figure class="exhibit-image">
 					<img 
-						src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP" 
-						alt="overview_si14bm"
+						src="https://drive.google.com/uc?export=view&id=1-MM-RPyAMMr92uZL2Re8uANrhgeBGDnX" 
+						alt="exhibit_3.png"
 					>
 				</figure>
 			</article>
@@ -108,8 +108,8 @@
 				<article class="kernel">
 					<figure class="kernel-image">
 						<img
-							src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP"
-							alt="backgound_kernekl1.png"
+							src="https://drive.google.com/uc?export=view&id=1-NGXx-rgIxZvjwzaIEKRi-iSQYWy0uqe"
+							alt="backgound_kernekl_1.png"
 						>
 					</figure>
 					<div class="kernel-text">
@@ -124,8 +124,8 @@
 				<article class="kernel">
 					<figure class="kernel-image">
 						<img 
-							src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP" 
-							alt="backgound_kernel2.png"
+							src="https://drive.google.com/uc?export=view&id=1-Rf3uvxut-A_NBpdfVYYuuEZpiU83ES9" 
+							alt="backgound_kernel_2.png"
 						>
 					</figure>
 					<div class="kernel-text">
@@ -140,8 +140,8 @@
 				<article class="kernel">
 					<figure class="kernel-image">
 						<img 
-						src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP"
-							alt="backgound_kernel3.png"
+						src="https://drive.google.com/uc?export=view&id=1-WUY0eXSeurEdLyUfrhv9A16HG9Ytapk"
+							alt="backgound_kernel_3.png"
 						>
 					</figure>
 					<div class="kernel-text">
@@ -166,8 +166,8 @@
 				</div>
 				<figure class="store-image">
 					<img 
-					src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP"
-						alt="overview_store.png"
+					src="https://drive.google.com/uc?export=view&id=1-YQYxWHYdPCvLgLODLwBossQlFF5TiSE"
+						alt="store_image.png"
 					>
 				</figure>
 			</article>
@@ -199,8 +199,8 @@
 			<div class="footer-img">
 				<figure class="footer-logo">
 					<img 
-						src="https://drive.google.com/uc?export=view&id=1-5ZJI71kbTYHEuiIMcBYi9bUply-LUbP"
-						alt="logo-linkarox-bi.svg"
+						src="https://drive.google.com/uc?export=view&id=1-ZQnKlS0nFDnMsW_MUWnCmeffzZynuhe"
+						alt="footer-img.png"
 					>
 				</figure>
 				<div class="footer-text">
